// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search record results should render a single claimable item with no authors on the record (record should appear in publicationsList prop) 1`] = `
<React.Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={true}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs={true}
      >
        <PublicationListLoadingProgress
          loadingPublicationSources={Object {}}
          mobile={true}
        />
      </WithStyles(Grid)>
    </Hidden>
    <WithStyles(Grid)
      item={true}
      md={9}
      sm={8}
    >
      <WithStyles(Grid)
        item={true}
        sm={12}
      >
        <StandardCard
          resultsText="Top [noOfResults] potential match(es) displayed for \\"[searchQuery]\\"."
          searchDashboard={
            Object {
              "ariaCircularProgressLabelSuffix": "loading",
              "recordSuffix": " record(s)",
              "repositories": Array [
                Object {
                  "id": "espace",
                  "title": "eSpace",
                },
                Object {
                  "id": "wos",
                  "title": "Web of science",
                },
                Object {
                  "id": "scopus",
                  "title": "Scopus",
                },
                Object {
                  "id": "pubmed",
                  "title": "PubMed",
                },
                Object {
                  "id": "crossref",
                  "title": "Crossref",
                },
              ],
              "title": "Repository search",
            }
          }
          text="Claim a matching work below, refine your search or create a new eSpace record."
          title="Possible matches found"
        >
          <WithStyles(Grid)
            container={true}
            spacing={16}
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              Top 1 potential match(es) displayed for "undefined".
              Claim a matching work below, refine your search or create a new eSpace record.
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <PublicationsList
                customActions={
                  Array [
                    Object {
                      "handleAction": [Function],
                      "label": "Claim this work",
                      "primary": true,
                    },
                  ]
                }
                publicationsList={
                  Array [
                    Object {
                      "currentSource": "espace",
                      "fez_datastream_info": Array [],
                      "fez_matched_journals": Array [],
                      "fez_record_search_key_access_conditions": null,
                      "fez_record_search_key_acknowledgements": null,
                      "fez_record_search_key_additional_notes": null,
                      "fez_record_search_key_advisory_statement": null,
                      "fez_record_search_key_alternate_genre": Array [],
                      "fez_record_search_key_alternative_title": Array [],
                      "fez_record_search_key_ands_collection_type": null,
                      "fez_record_search_key_architectural_features": Array [],
                      "fez_record_search_key_article_number": null,
                      "fez_record_search_key_assigned_group_id": Array [],
                      "fez_record_search_key_assigned_user_id": Array [],
                      "fez_record_search_key_author": Array [],
                      "fez_record_search_key_author_affiliation_country": Array [],
                      "fez_record_search_key_author_affiliation_full_address": Array [],
                      "fez_record_search_key_author_affiliation_id": Array [],
                      "fez_record_search_key_author_affiliation_name": Array [],
                      "fez_record_search_key_author_id": Array [],
                      "fez_record_search_key_author_role": Array [],
                      "fez_record_search_key_biosis_id": null,
                      "fez_record_search_key_book_title": null,
                      "fez_record_search_key_building_materials": Array [],
                      "fez_record_search_key_category": Array [],
                      "fez_record_search_key_chapter_number": null,
                      "fez_record_search_key_condition": Array [],
                      "fez_record_search_key_conference_dates": null,
                      "fez_record_search_key_conference_id": null,
                      "fez_record_search_key_conference_location": null,
                      "fez_record_search_key_conference_name": null,
                      "fez_record_search_key_construction_date": null,
                      "fez_record_search_key_contact_details_email": Array [],
                      "fez_record_search_key_contributor": Array [
                        Object {
                          "rek_contributor": "El-Hawary, Ron",
                          "rek_contributor_id": 3210380,
                          "rek_contributor_order": 1,
                          "rek_contributor_pid": "UQ:795469",
                          "rek_contributor_xsdmf_id": null,
                        },
                        Object {
                          "rek_contributor": "Eberson, Craig P.",
                          "rek_contributor_id": 3210381,
                          "rek_contributor_order": 2,
                          "rek_contributor_pid": "UQ:795469",
                          "rek_contributor_xsdmf_id": null,
                        },
                      ],
                      "fez_record_search_key_contributor_id": Array [],
                      "fez_record_search_key_convener": null,
                      "fez_record_search_key_corresponding_country": Array [],
                      "fez_record_search_key_corresponding_email": Array [],
                      "fez_record_search_key_corresponding_name": Array [],
                      "fez_record_search_key_corresponding_organisation": Array [],
                      "fez_record_search_key_country_of_issue": null,
                      "fez_record_search_key_coverage_period": Array [],
                      "fez_record_search_key_creator_id": Array [],
                      "fez_record_search_key_creator_name": Array [],
                      "fez_record_search_key_data_volume": null,
                      "fez_record_search_key_datastream_policy": null,
                      "fez_record_search_key_date_available": null,
                      "fez_record_search_key_date_photo_taken": null,
                      "fez_record_search_key_date_recorded": null,
                      "fez_record_search_key_date_scanned": null,
                      "fez_record_search_key_doi": Object {
                        "rek_doi": "10.1007/978-3-319-71580-3",
                        "rek_doi_id": 1706187,
                        "rek_doi_pid": "UQ:795469",
                        "rek_doi_xsdmf_id": null,
                      },
                      "fez_record_search_key_edition": null,
                      "fez_record_search_key_end_date": null,
                      "fez_record_search_key_end_page": null,
                      "fez_record_search_key_file_attachment_access_condition": Array [],
                      "fez_record_search_key_file_attachment_embargo_date": Array [],
                      "fez_record_search_key_file_attachment_name": Array [],
                      "fez_record_search_key_geographic_area": Array [],
                      "fez_record_search_key_grant_acronym": Array [],
                      "fez_record_search_key_grant_agency": Array [],
                      "fez_record_search_key_grant_agency_id": Array [],
                      "fez_record_search_key_grant_id": Array [],
                      "fez_record_search_key_grant_text": Array [],
                      "fez_record_search_key_herdc_code": null,
                      "fez_record_search_key_herdc_status": null,
                      "fez_record_search_key_identifier": Array [],
                      "fez_record_search_key_institutional_status": null,
                      "fez_record_search_key_interior_features": Array [],
                      "fez_record_search_key_isbn": Array [
                        Object {
                          "rek_isbn": "9783319715797",
                          "rek_isbn_id": 1115631,
                          "rek_isbn_order": 1,
                          "rek_isbn_pid": "UQ:795469",
                          "rek_isbn_xsdmf_id": null,
                        },
                        Object {
                          "rek_isbn": "9783319715803",
                          "rek_isbn_id": 1115632,
                          "rek_isbn_order": 2,
                          "rek_isbn_pid": "UQ:795469",
                          "rek_isbn_xsdmf_id": null,
                        },
                      ],
                      "fez_record_search_key_isdatasetof": Array [],
                      "fez_record_search_key_isderivationof": Array [],
                      "fez_record_search_key_isi_loc": null,
                      "fez_record_search_key_ismemberof": Array [
                        Object {
                          "rek_ismemberof": "UQ:218198",
                          "rek_ismemberof_id": 12232758,
                          "rek_ismemberof_lookup": "Unprocessed Records",
                          "rek_ismemberof_order": 1,
                          "rek_ismemberof_pid": "UQ:795469",
                          "rek_ismemberof_xsdmf_id": null,
                        },
                      ],
                      "fez_record_search_key_issn": Array [],
                      "fez_record_search_key_issue_number": null,
                      "fez_record_search_key_job_number": null,
                      "fez_record_search_key_journal_name": null,
                      "fez_record_search_key_keywords": Array [],
                      "fez_record_search_key_language": Array [],
                      "fez_record_search_key_language_of_book_title": Array [],
                      "fez_record_search_key_language_of_journal_name": Array [],
                      "fez_record_search_key_language_of_proceedings_title": Array [],
                      "fez_record_search_key_language_of_title": Array [],
                      "fez_record_search_key_length": null,
                      "fez_record_search_key_license": null,
                      "fez_record_search_key_link": Array [],
                      "fez_record_search_key_link_description": Array [],
                      "fez_record_search_key_location": Array [],
                      "fez_record_search_key_native_script_book_title": null,
                      "fez_record_search_key_native_script_conference_name": null,
                      "fez_record_search_key_native_script_journal_name": null,
                      "fez_record_search_key_native_script_proceedings_title": null,
                      "fez_record_search_key_native_script_title": null,
                      "fez_record_search_key_newspaper": null,
                      "fez_record_search_key_notes": null,
                      "fez_record_search_key_oa_embargo_days": null,
                      "fez_record_search_key_oa_notes": null,
                      "fez_record_search_key_oa_status": Object {
                        "rek_oa_status": 453692,
                        "rek_oa_status_id": 531834,
                        "rek_oa_status_lookup": "Not yet assessed",
                        "rek_oa_status_pid": "UQ:795469",
                        "rek_oa_status_xsdmf_id": null,
                      },
                      "fez_record_search_key_org_name": null,
                      "fez_record_search_key_org_unit_name": null,
                      "fez_record_search_key_original_format": null,
                      "fez_record_search_key_parent_publication": null,
                      "fez_record_search_key_patent_number": null,
                      "fez_record_search_key_period": Array [],
                      "fez_record_search_key_place_of_publication": Object {
                        "rek_place_of_publication": "Cham",
                        "rek_place_of_publication_id": 4368221,
                        "rek_place_of_publication_pid": "UQ:795469",
                        "rek_place_of_publication_xsdmf_id": null,
                      },
                      "fez_record_search_key_proceedings_title": null,
                      "fez_record_search_key_project_description": null,
                      "fez_record_search_key_project_id": null,
                      "fez_record_search_key_project_name": null,
                      "fez_record_search_key_project_start_date": null,
                      "fez_record_search_key_publisher": Object {
                        "rek_publisher": "Springer International Publishing",
                        "rek_publisher_id": 4678387,
                        "rek_publisher_pid": "UQ:795469",
                        "rek_publisher_xsdmf_id": null,
                      },
                      "fez_record_search_key_pubmed_central_id": null,
                      "fez_record_search_key_pubmed_id": null,
                      "fez_record_search_key_refereed": null,
                      "fez_record_search_key_refereed_source": null,
                      "fez_record_search_key_related_datasets": null,
                      "fez_record_search_key_related_publications": null,
                      "fez_record_search_key_report_number": null,
                      "fez_record_search_key_retracted": null,
                      "fez_record_search_key_rights": null,
                      "fez_record_search_key_roman_script_book_title": null,
                      "fez_record_search_key_roman_script_conference_name": null,
                      "fez_record_search_key_roman_script_journal_name": null,
                      "fez_record_search_key_roman_script_proceedings_title": null,
                      "fez_record_search_key_roman_script_title": null,
                      "fez_record_search_key_scale": null,
                      "fez_record_search_key_scopus_id": null,
                      "fez_record_search_key_section": null,
                      "fez_record_search_key_seo_code": Array [],
                      "fez_record_search_key_series": null,
                      "fez_record_search_key_software_required": Array [],
                      "fez_record_search_key_source": null,
                      "fez_record_search_key_start_date": null,
                      "fez_record_search_key_start_page": null,
                      "fez_record_search_key_structural_systems": Array [],
                      "fez_record_search_key_style": Array [],
                      "fez_record_search_key_subcategory": Array [],
                      "fez_record_search_key_subject": Array [],
                      "fez_record_search_key_supervisor": Array [],
                      "fez_record_search_key_supervisor_id": Array [],
                      "fez_record_search_key_surrounding_features": Array [],
                      "fez_record_search_key_time_period_end_date": null,
                      "fez_record_search_key_time_period_start_date": null,
                      "fez_record_search_key_total_chapters": null,
                      "fez_record_search_key_total_pages": null,
                      "fez_record_search_key_transcript": null,
                      "fez_record_search_key_translated_book_title": null,
                      "fez_record_search_key_translated_conference_name": null,
                      "fez_record_search_key_translated_journal_name": null,
                      "fez_record_search_key_translated_newspaper": null,
                      "fez_record_search_key_translated_proceedings_title": null,
                      "fez_record_search_key_translated_title": null,
                      "fez_record_search_key_type_of_data": Array [],
                      "fez_record_search_key_volume_number": null,
                      "fez_record_search_key_wok_doc_types": Array [],
                      "fez_record_search_key_zoorec_id": null,
                      "rek_altmetric_id": null,
                      "rek_altmetric_id_xsdmf_id": null,
                      "rek_altmetric_score": null,
                      "rek_altmetric_score_xsdmf_id": null,
                      "rek_citation": " <i><a class=\\"citation_title\\" title=\\"Click to view Book: Early Onset Scoliosis\\" href=\\"/view/UQ:795469\\">Early Onset Scoliosis</a></i>. Edited by <span class=\\"citation_contributor\\"><span class=\\"citation_contributor\\">El-Hawary, Ron</span> and <span class=\\"citation_contributor\\">Eberson, Craig P.</span></span>  <span class=\\"citation_place_of_publication\\">Cham</span>: <span class=\\"citation_publisher\\">Springer International Publishing</span>, <span class=\\"citation_date\\">2018</span>. doi:<span class=\\"citation_doi\\">10.1007/978-3-319-71580-3</span>",
                      "rek_copyright": null,
                      "rek_copyright_xsdmf_id": null,
                      "rek_created_date": "2018-03-07T23:30:00Z",
                      "rek_created_date_xsdmf_id": null,
                      "rek_date": "2018-01-01T00:00:00Z",
                      "rek_date_xsdmf_id": null,
                      "rek_depositor": 6230,
                      "rek_depositor_affiliation": null,
                      "rek_depositor_affiliation_xsdmf_id": null,
                      "rek_depositor_xsdmf_id": null,
                      "rek_description": null,
                      "rek_description_xsdmf_id": null,
                      "rek_display_type": 174,
                      "rek_display_type_lookup": "Book",
                      "rek_display_type_xsdmf_id": null,
                      "rek_file_downloads": 0,
                      "rek_formatted_abstract": null,
                      "rek_formatted_abstract_xsdmf_id": null,
                      "rek_formatted_title": null,
                      "rek_formatted_title_xsdmf_id": null,
                      "rek_genre": null,
                      "rek_genre_type": null,
                      "rek_genre_type_xsdmf_id": null,
                      "rek_genre_xsdmf_id": null,
                      "rek_herdc_notes": null,
                      "rek_herdc_notes_xsdmf_id": null,
                      "rek_object_type": 3,
                      "rek_object_type_lookup": "Record",
                      "rek_object_type_xsdmf_id": null,
                      "rek_pid": "UQ:795469",
                      "rek_pubmed_doc_type": null,
                      "rek_pubmed_doc_type_lookup": null,
                      "rek_pubmed_doc_type_xsdmf_id": null,
                      "rek_scopus_citation_count": null,
                      "rek_scopus_doc_type": null,
                      "rek_scopus_doc_type_lookup": null,
                      "rek_scopus_doc_type_xsdmf_id": null,
                      "rek_security_inherited": 1,
                      "rek_status": 2,
                      "rek_status_lookup": "Published",
                      "rek_status_xsdmf_id": null,
                      "rek_subtype": null,
                      "rek_subtype_xsdmf_id": null,
                      "rek_thomson_citation_count": null,
                      "rek_thomson_citation_count_xsdmf_id": null,
                      "rek_title": "Early Onset Scoliosis - this is an edited book with editors only",
                      "rek_title_xsdmf_id": null,
                      "rek_updated_date": "2018-03-07T23:30:00Z",
                      "rek_updated_date_xsdmf_id": null,
                      "rek_wok_doc_type": null,
                      "rek_wok_doc_type_lookup": null,
                      "rek_wok_doc_type_xsdmf_id": null,
                      "sources": Array [
                        Object {
                          "id": "UQ:795469",
                          "source": "espace",
                        },
                        Object {
                          "id": "10.1007/978-3-319-71580-3",
                          "source": "crossref",
                        },
                      ],
                    },
                  ]
                }
                publicationsListSubset={Array []}
                showSources={true}
                subsetCustomActions={
                  Array [
                    Object {
                      "disabled": true,
                      "label": "All authors have been assigned",
                      "primary": false,
                    },
                  ]
                }
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
        </StandardCard>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            xs={true}
          />
          <WithStyles(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(Button)
              fullWidth={true}
              onClick={[Function]}
            >
              Abandon and search again
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Create a new eSpace record
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        md={3}
        sm={4}
      >
        <StandardRighthandCard
          title="Repository search"
        >
          <PublicationListLoadingProgress
            loadingPublicationSources={Object {}}
          />
        </StandardRighthandCard>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</React.Fragment>
`;

exports[`Search record results should render a single unclaimable item with no authors on the record (record should appear in publicationsListSubset prop) 1`] = `
<React.Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={true}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs={true}
      >
        <PublicationListLoadingProgress
          loadingPublicationSources={Object {}}
          mobile={true}
        />
      </WithStyles(Grid)>
    </Hidden>
    <WithStyles(Grid)
      item={true}
      md={9}
      sm={8}
    >
      <WithStyles(Grid)
        item={true}
        sm={12}
      >
        <StandardCard
          resultsText="Top [noOfResults] potential match(es) displayed for \\"[searchQuery]\\"."
          searchDashboard={
            Object {
              "ariaCircularProgressLabelSuffix": "loading",
              "recordSuffix": " record(s)",
              "repositories": Array [
                Object {
                  "id": "espace",
                  "title": "eSpace",
                },
                Object {
                  "id": "wos",
                  "title": "Web of science",
                },
                Object {
                  "id": "scopus",
                  "title": "Scopus",
                },
                Object {
                  "id": "pubmed",
                  "title": "PubMed",
                },
                Object {
                  "id": "crossref",
                  "title": "Crossref",
                },
              ],
              "title": "Repository search",
            }
          }
          text="Claim a matching work below, refine your search or create a new eSpace record."
          title="Possible matches found"
        >
          <WithStyles(Grid)
            container={true}
            spacing={16}
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              Top 1 potential match(es) displayed for "undefined".
              Claim a matching work below, refine your search or create a new eSpace record.
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <PublicationsList
                customActions={
                  Array [
                    Object {
                      "handleAction": [Function],
                      "label": "Claim this work",
                      "primary": true,
                    },
                  ]
                }
                publicationsList={
                  Array [
                    Object {
                      "currentSource": "espace",
                      "fez_record_search_key_author": Array [],
                      "fez_record_search_key_author_id": Array [],
                      "fez_record_search_key_contributor": Array [
                        Object {
                          "rek_contributor": "El-Hawary, Ron",
                          "rek_contributor_id": 3210380,
                          "rek_contributor_order": 1,
                          "rek_contributor_pid": "UQ:795469",
                          "rek_contributor_xsdmf_id": null,
                        },
                        Object {
                          "rek_contributor": "Eberson, Craig P.",
                          "rek_contributor_id": 3210381,
                          "rek_contributor_order": 2,
                          "rek_contributor_pid": "UQ:795469",
                          "rek_contributor_xsdmf_id": null,
                        },
                      ],
                      "fez_record_search_key_contributor_id": Array [
                        Object {
                          "rek_contributor_id": 111,
                          "rek_contributor_id_id": 28581254,
                          "rek_contributor_id_order": 1,
                          "rek_contributor_id_pid": "UQ:70915",
                          "rek_contributor_id_xsdmf_id": null,
                        },
                        Object {
                          "rek_contributor_id": 222,
                          "rek_contributor_id_id": 28581254,
                          "rek_contributor_id_order": 2,
                          "rek_contributor_id_pid": "UQ:70915",
                          "rek_contributor_id_xsdmf_id": null,
                        },
                      ],
                      "fez_record_search_key_doi": Object {
                        "rek_doi": "10.1007/978-3-319-71580-3",
                        "rek_doi_id": 1706187,
                        "rek_doi_pid": "UQ:795469",
                        "rek_doi_xsdmf_id": null,
                      },
                      "rek_pid": "UQ:795469",
                      "sources": Array [
                        Object {
                          "id": "UQ:795469",
                          "source": "espace",
                        },
                        Object {
                          "id": "10.1007/978-3-319-71580-3",
                          "source": "crossref",
                        },
                      ],
                    },
                  ]
                }
                publicationsListSubset={
                  Array [
                    "UQ:795469",
                  ]
                }
                showSources={true}
                subsetCustomActions={
                  Array [
                    Object {
                      "disabled": true,
                      "label": "All authors have been assigned",
                      "primary": false,
                    },
                  ]
                }
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
        </StandardCard>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            xs={true}
          />
          <WithStyles(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(Button)
              fullWidth={true}
              onClick={[Function]}
            >
              Abandon and search again
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Create a new eSpace record
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        md={3}
        sm={4}
      >
        <StandardRighthandCard
          title="Repository search"
        >
          <PublicationListLoadingProgress
            loadingPublicationSources={Object {}}
          />
        </StandardRighthandCard>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</React.Fragment>
`;

exports[`Search record results should render publications list with one publication to be able to claim (record should not appear in publicationsListSubset prop) 1`] = `
<React.Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={true}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs={true}
      >
        <PublicationListLoadingProgress
          loadingPublicationSources={Object {}}
          mobile={true}
        />
      </WithStyles(Grid)>
    </Hidden>
    <WithStyles(Grid)
      item={true}
      md={9}
      sm={8}
    >
      <WithStyles(Grid)
        item={true}
        sm={12}
      >
        <StandardCard
          resultsText="Top [noOfResults] potential match(es) displayed for \\"[searchQuery]\\"."
          searchDashboard={
            Object {
              "ariaCircularProgressLabelSuffix": "loading",
              "recordSuffix": " record(s)",
              "repositories": Array [
                Object {
                  "id": "espace",
                  "title": "eSpace",
                },
                Object {
                  "id": "wos",
                  "title": "Web of science",
                },
                Object {
                  "id": "scopus",
                  "title": "Scopus",
                },
                Object {
                  "id": "pubmed",
                  "title": "PubMed",
                },
                Object {
                  "id": "crossref",
                  "title": "Crossref",
                },
              ],
              "title": "Repository search",
            }
          }
          text="Claim a matching work below, refine your search or create a new eSpace record."
          title="Possible matches found"
        >
          <WithStyles(Grid)
            container={true}
            spacing={16}
          >
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              Top 1 potential match(es) displayed for "undefined".
              Claim a matching work below, refine your search or create a new eSpace record.
            </WithStyles(Grid)>
            <WithStyles(Grid)
              item={true}
              xs={12}
            >
              <PublicationsList
                customActions={
                  Array [
                    Object {
                      "handleAction": [Function],
                      "label": "Claim this work",
                      "primary": true,
                    },
                  ]
                }
                publicationsList={
                  Array [
                    Object {
                      "fez_record_search_key_author": Array [
                        Object {
                          "rek_author": "Jory, Patrick",
                          "rek_author_id": 29052679,
                          "rek_author_order": 1,
                          "rek_author_pid": "UQ:255472",
                          "rek_author_xsdmf_id": 7049,
                        },
                        Object {
                          "rek_author": "Montesano, Michael J.",
                          "rek_author_id": 29052680,
                          "rek_author_order": 2,
                          "rek_author_pid": "UQ:255472",
                          "rek_author_xsdmf_id": 7049,
                        },
                      ],
                      "fez_record_search_key_author_id": Array [
                        Object {
                          "rek_author_id": 86825,
                          "rek_author_id_id": 28420647,
                          "rek_author_id_lookup": "Patrick Jory",
                          "rek_author_id_order": 1,
                          "rek_author_id_pid": "UQ:255472",
                          "rek_author_id_xsdmf_id": 7044,
                        },
                        Object {
                          "rek_author_id": 0,
                          "rek_author_id_id": 28420648,
                          "rek_author_id_order": 2,
                          "rek_author_id_pid": "UQ:255472",
                          "rek_author_id_xsdmf_id": 7044,
                        },
                      ],
                      "fez_record_search_key_contributor": Array [],
                      "fez_record_search_key_contributor_id": Array [],
                      "rek_pid": "UQ:255472",
                    },
                  ]
                }
                publicationsListSubset={Array []}
                showSources={true}
                subsetCustomActions={
                  Array [
                    Object {
                      "disabled": true,
                      "label": "All authors have been assigned",
                      "primary": false,
                    },
                  ]
                }
              />
            </WithStyles(Grid)>
          </WithStyles(Grid)>
        </StandardCard>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            xs={true}
          />
          <WithStyles(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(Button)
              fullWidth={true}
              onClick={[Function]}
            >
              Abandon and search again
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Create a new eSpace record
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        md={3}
        sm={4}
      >
        <StandardRighthandCard
          title="Repository search"
        >
          <PublicationListLoadingProgress
            loadingPublicationSources={Object {}}
          />
        </StandardRighthandCard>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</React.Fragment>
`;

exports[`Search record results should render stepper and no results 1`] = `
<React.Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={true}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs={true}
      >
        <PublicationListLoadingProgress
          loadingPublicationSources={Object {}}
          mobile={true}
        />
      </WithStyles(Grid)>
    </Hidden>
    <WithStyles(Grid)
      item={true}
      md={9}
      sm={8}
    >
      <WithStyles(Grid)
        item={true}
        sm={12}
      >
        <StandardCard
          text="We were unable to match any results to your search criteria. Please search again or create a new eSpace record."
          title="No matching works found"
        >
          We were unable to match any results to your search criteria. Please search again or create a new eSpace record.
        </StandardCard>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            xs={true}
          />
          <WithStyles(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(Button)
              fullWidth={true}
              onClick={[Function]}
            >
              Abandon and search again
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[Function]}
              variant="contained"
            >
              Create a new eSpace record
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        md={3}
        sm={4}
      >
        <StandardRighthandCard
          title="Repository search"
        >
          <PublicationListLoadingProgress
            loadingPublicationSources={Object {}}
          />
        </StandardRighthandCard>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
</React.Fragment>
`;
